--- a/index.html
+++ b/index.html
@@ -7,18 +7,29 @@
     <title>Big V Stat Tracker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <style>
+        #divisionSelect {
+            max-height: 200px;
+            overflow: auto;
+        }
+    </style>
 </head>
 
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-1 col-sm-0"></div>
-            <div class="col-md-3 col-sm-4 col-6 p-3">
-                <select id="divisionSelect" class="form-select">
-                    <option value="">Select Division</option>
-                </select>
+            <div class="col-md-4 col-sm-4 col-12 p-3">
+                <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Select Divisions
+                    </button>
+                    <ul class="dropdown-menu p-2" id="divisionDropdown" style="width: 300px;">
+                        <!-- JavaScript will populate this -->
+                    </ul>
+                </div>
             </div>
-            <div class="col-md-3 col-sm-4 col-6 p-3">
+            <div class="col-md-4 col-sm-4 col-12 p-3">
                 <select id="seasonSelect" class="form-select" disabled>
                     <option>Select Season</option>
                     <div class="spinner-border spinner-border-sm" role="status">
@@ -27,31 +38,43 @@
                 </select>
 
             </div>
-            <div class="col-md-3 col-sm-4 col-6 p-3">
+            <div class="col-md-4 col-sm-4 col-12 p-3">
                 <select id="roundSelect" class="form-select" disabled>
                     <option>Select Round</option>
                 </select>
             </div>
-            <div class="col-md-1 col-sm-0"></div>
         </div>
         <div class="row">
             <div class="col p-3">
                 <table class="table table-striped border" id="statsTable">
                     <thead>
                         <tr>
-                            <th scope="col"><button type="button" class="btn btn-link" onclick="populateTable('bib')">#</button></th>
-                            <th scope="col"><button type="button" class="btn btn-link" onclick="populateTable('personName')">Name</button></th>
-                            <th scope="col"><button type="button" class="btn btn-link" onclick="populateTable('teamName')">Team</button></th>
-                            <th scope="col"><button type="button" class="btn btn-link" onclick="populateTable('gameTitleHomeVsAway')">Game</button></th>
-                            <th scope="col"><button type="button" class="btn btn-link" onclick="populateTable('competitionName')">Comp</button></th>
-                            <th scope="col"><button type="button" class="btn btn-link" onclick="populateTable('minutes')">MIN</button></th>
-                            <th scope="col"><button type="button" class="btn btn-link" onclick="populateTable('points')">PTS</button></th>
-                            <th scope="col"><button type="button" class="btn btn-link" onclick="populateTable('fieldGoalsPercentage')">FG%</button></th>
-                            <th scope="col"><button type="button" class="btn btn-link" onclick="populateTable('trueShootingPercentage')">TS%</button></th>
-                            <th scope="col"><button type="button" class="btn btn-link" onclick="populateTable('foulsPersonal')">PF</button></th>
-                            <th scope="col"><button type="button" class="btn btn-link" onclick="populateTable('plusMinus')">+/-</button></th>
-                            <th scope="col"><button type="button" class="btn btn-link" onclick="populateTable('efficiency')">Eff</button></th>
-                            <th scope="col"><button type="button" class="btn btn-link" onclick="populateTable('gameScore')">GmSc</button></th>
+                            <th scope="col"><button type="button" class="btn btn-link"
+                                    onclick="populateTable('bib')">#</button></th>
+                            <th scope="col"><button type="button" class="btn btn-link"
+                                    onclick="populateTable('personName')">Name</button></th>
+                            <th scope="col"><button type="button" class="btn btn-link"
+                                    onclick="populateTable('teamName')">Team</button></th>
+                            <th scope="col"><button type="button" class="btn btn-link"
+                                    onclick="populateTable('gameTitleHomeVsAway')">Game</button></th>
+                            <th scope="col"><button type="button" class="btn btn-link"
+                                    onclick="populateTable('competitionName')">Comp</button></th>
+                            <th scope="col"><button type="button" class="btn btn-link"
+                                    onclick="populateTable('minutes')">MIN</button></th>
+                            <th scope="col"><button type="button" class="btn btn-link"
+                                    onclick="populateTable('points')">PTS</button></th>
+                            <th scope="col"><button type="button" class="btn btn-link"
+                                    onclick="populateTable('fieldGoalsPercentage')">FG%</button></th>
+                            <th scope="col"><button type="button" class="btn btn-link"
+                                    onclick="populateTable('trueShootingPercentage')">TS%</button></th>
+                            <th scope="col"><button type="button" class="btn btn-link"
+                                    onclick="populateTable('foulsPersonal')">PF</button></th>
+                            <th scope="col"><button type="button" class="btn btn-link"
+                                    onclick="populateTable('plusMinus')">+/-</button></th>
+                            <th scope="col"><button type="button" class="btn btn-link"
+                                    onclick="populateTable('efficiency')">Eff</button></th>
+                            <th scope="col"><button type="button" class="btn btn-link"
+                                    onclick="populateTable('gameScore')">GmSc</button></th>
                         </tr>
                     </thead>
                     <tbody id="statsTableBody">
@@ -69,12 +92,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js"
-        integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D"
         crossorigin="anonymous"></script>
     <script>
         const divisions = [
@@ -196,7 +213,7 @@
         const roundPlayers = [];
 
         function getRoundPlayers(competitionName, roundNumber) {
-            
+
         }
 
         // --------------------------
@@ -210,21 +227,32 @@
 
         function populateDivisionSelect() {
             // Populate the division select element
-            const select = document.getElementById("divisionSelect");
+            const dropdownMenu = document.getElementById('divisionDropdown')
 
-            divisions.forEach((div) => {
-                const option = document.createElement("option");
-                option.value = div.id;
-                option.textContent = div.name;
-                select.appendChild(option);
-            });
+            divisions.forEach(division => {
+                const li = document.createElement('li');
 
-            // Listen for user selection
-            select.addEventListener("change", () => {
-                const selectedId = select.value;
-                if (selectedId) {
-                    populateSeasonSelect(selectedId);
-                }
+                const checkWrapper = document.createElement('div');
+                checkWrapper.className = 'form-check';
+
+                const checkbox = document.createElement('input');
+                checkbox.className = 'form-check-input';
+                checkbox.type = 'checkbox';
+                checkbox.value = division.id;
+                checkbox.id = `div-${division.id}`;
+
+                const label = document.createElement('label');
+                label.className = 'form-check-label';
+                label.setAttribute('for', checkbox.id);
+                label.textContent = division.name;
+
+                checkWrapper.appendChild(checkbox);
+                checkWrapper.appendChild(label);
+                li.appendChild(checkWrapper);
+                dropdownMenu.appendChild(li);
+
+                // Prevent dropdown from closing on click
+                checkWrapper.addEventListener('click', (e) => e.stopPropagation());
             });
         }
 
