added all division checkboxes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkChampMen">
+                    <input class="form-check-input" type="checkbox" value="champMen" id="checkChampMen">
                     <label class="form-check-label" for="checkChampMen">
                         Championship Men
                     </label>
@@ -38,25 +38,97 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkChampMen">
-                    <label class="form-check-label" for="checkChampMen">
+                    <input class="form-check-input" type="checkbox" value="champWomen" id="checkChampWomen">
+                    <label class="form-check-label" for="checkChampWomen">
                         Championship Women
                     </label>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkChampMen">
-                    <label class="form-check-label" for="checkChampMen">
+                    <input class="form-check-input" type="checkbox" value="divisionOneMen" id="checkDivisionOneMen">
+                    <label class="form-check-label" for="checkDivisionOneMen">
                         Division One Men
                     </label>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkChampMen">
-                    <label class="form-check-label" for="checkChampMen">
+                    <input class="form-check-input" type="checkbox" value="divisionOneWomen" id="checkDivisionOneWomen">
+                    <label class="form-check-label" for="checkDivisionOneWomen">
                         Division One Women
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="divisionTwoMen" id="checkDivisionTwoMen">
+                    <label class="form-check-label" for="checkDivisionTwoMen">
+                        Division Two Men
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="divisionTwoWomen" id="checkDivisionTwoWomen">
+                    <label class="form-check-label" for="checkDivisionTwoWomen">
+                        Division Two Women
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="victorianYouthChampMen" id="checkVictorianYouthChampMen">
+                    <label class="form-check-label" for="checkVictorianYouthChampMen">
+                        Victorian Youth Championship Men
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="victorianYouthChampWomen" id="checkVictorianYouthChampWomen">
+                    <label class="form-check-label" for="checkVictorianYouthChampWomen">
+                        Victorian Youth Championship Women
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="youthLeagueOneMen" id="checkYouthLeagueOneMen">
+                    <label class="form-check-label" for="checkYouthLeagueOneMen">
+                        Youth League One Men
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="youthLeagueOneWomen" id="checkYouthLeagueOneWomen">
+                    <label class="form-check-label" for="checkYouthLeagueOneWomen">
+                        Youth League One Women
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="youthLeagueTwoMen" id="checkYouthLeagueTwoMen">
+                    <label class="form-check-label" for="checkYouthLeagueOneMen">
+                        Youth League Two Men
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="youthLeagueTwoWomen" id="checkYouthLeagueOneWomen">
+                    <label class="form-check-label" for="checkYouthLeagueOneWomen">
+                        Youth League Two Women
+                    </label>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="youthLeagueThreeMen" id="checkYouthLeagueThreeMen">
+                    <label class="form-check-label" for="checkYouthLeagueThreeMen">
+                        Youth League Three Men
                     </label>
                 </div>
             </div>
