fetch game data and populate table

--- a/index.html
+++ b/index.html
@@ -13,24 +13,21 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-sm-4 col-12 p-3">
+            <div class="col-lg-3 col-md-6 col-sm-6 col-12 p-3">
                 <select id="seasonSelect" class="form-select" disabled>
                     <option>Select Season</option>
                 </select>
             </div>
-            <div class="col-md-4 col-sm-4 col-12 p-3">
+            <div class="col-lg-3 col-md-6 col-sm-6 col-12 p-3">
                 <select id="weekSelect" class="form-select" disabled>
                     <option>Select Week</option>
                 </select>
-            </div>
-            <div class="col-md-4 col-sm-4 col-12 p-3">
-                <button type="button" class="btn btn-primary">Fetch Data</button>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="champMen" id="checkChampMen">
+                    <input class="form-check-input" type="checkbox" value="champMen" id="checkChampMen" checked>
                     <label class="form-check-label" for="checkChampMen">
                         Championship Men
                     </label>
@@ -46,7 +43,8 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="divisionOneMen" id="checkDivisionOneMen">
+                    <input class="form-check-input" type="checkbox" value="divisionOneMen" id="checkDivisionOneMen"
+                        checked>
                     <label class="form-check-label" for="checkDivisionOneMen">
                         Division One Men
                     </label>
@@ -62,7 +60,8 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="divisionTwoMen" id="checkDivisionTwoMen">
+                    <input class="form-check-input" type="checkbox" value="divisionTwoMen" id="checkDivisionTwoMen"
+                        checked>
                     <label class="form-check-label" for="checkDivisionTwoMen">
                         Division Two Men
                     </label>
@@ -78,23 +77,26 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="victorianYouthChampMen" id="checkVictorianYouthChampMen">
+                    <input class="form-check-input" type="checkbox" value="victorianYouthChampMen"
+                        id="checkVictorianYouthChampMen">
                     <label class="form-check-label" for="checkVictorianYouthChampMen">
-                        Victorian Youth Championship Men
+                        Vic Youth Champ Men
                     </label>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="victorianYouthChampWomen" id="checkVictorianYouthChampWomen">
+                    <input class="form-check-input" type="checkbox" value="victorianYouthChampWomen"
+                        id="checkVictorianYouthChampWomen">
                     <label class="form-check-label" for="checkVictorianYouthChampWomen">
-                        Victorian Youth Championship Women
+                        Vic Youth Champ Women
                     </label>
                 </div>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="youthLeagueOneMen" id="checkYouthLeagueOneMen">
+                    <input class="form-check-input" type="checkbox" value="youthLeagueOneMen"
+                        id="checkYouthLeagueOneMen">
                     <label class="form-check-label" for="checkYouthLeagueOneMen">
                         Youth League One Men
                     </label>
@@ -102,7 +104,8 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="youthLeagueOneWomen" id="checkYouthLeagueOneWomen">
+                    <input class="form-check-input" type="checkbox" value="youthLeagueOneWomen"
+                        id="checkYouthLeagueOneWomen">
                     <label class="form-check-label" for="checkYouthLeagueOneWomen">
                         Youth League One Women
                     </label>
@@ -110,7 +113,8 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="youthLeagueTwoMen" id="checkYouthLeagueTwoMen">
+                    <input class="form-check-input" type="checkbox" value="youthLeagueTwoMen"
+                        id="checkYouthLeagueTwoMen">
                     <label class="form-check-label" for="checkYouthLeagueOneMen">
                         Youth League Two Men
                     </label>
@@ -118,7 +122,8 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="youthLeagueTwoWomen" id="checkYouthLeagueOneWomen">
+                    <input class="form-check-input" type="checkbox" value="youthLeagueTwoWomen"
+                        id="checkYouthLeagueOneWomen">
                     <label class="form-check-label" for="checkYouthLeagueOneWomen">
                         Youth League Two Women
                     </label>
@@ -126,7 +131,8 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="youthLeagueThreeMen" id="checkYouthLeagueThreeMen">
+                    <input class="form-check-input" type="checkbox" value="youthLeagueThreeMen"
+                        id="checkYouthLeagueThreeMen">
                     <label class="form-check-label" for="checkYouthLeagueThreeMen">
                         Youth League Three Men
                     </label>
@@ -169,13 +175,14 @@
                     <tbody id="statsTableBody">
                     </tbody>
                 </table>
-                <div id="progressContainer" class="progress d-none" role="progressbar" aria-label="Round data loading"
-                    aria-valuemin="0" aria-valuemax="100">
-                    <div id="progressBar" class="progress-bar" style="width: 0%" aria-valuenow="0"></div>
-                </div>
+
             </div>
         </div>
         <div class="row">
+            <div id="progressContainer" class="progress d-none" role="progressbar" aria-label="Round data loading"
+                aria-valuemin="0" aria-valuemax="100">
+                <div id="progressBar" class="progress-bar" style="width: 0%" aria-valuenow="0"></div>
+            </div>
         </div>
     </div>
 
